# orchestra-ai

./: .dockerignore  .env.example  .gitignore  BUILD_LOG.md  CONTRIBUTING.md  Dockerfile  GO_LIVE_CHECKLIST.md  LICENSE  LOCAL_STRIPE_TEST.md  Makefile  README.md  SECURITY.md  STATE_OF_THE_UNION.md  ai_marketing_platform_5fc51575.plan.md  alembic.ini  docker-compose.yml  enhance_video.py  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docker.yml  frontend.yml  release.yml  website.yml
docs/: architecture.md  audit_addendum.md  cost-analysis.md  cro_demo_page.md  cro_landing_page.md  ctv_dsp_integration.md  data-moat.md  demo_video.md  differentiation.md  due-diligence.md  gap_analysis.md  guardrailed-bidding.md  hybrid_launch_strategy.md  launch-strategy.md  marketing_video.md  new_prompt_for_checklist.md  production_deployment_playbook.md  security-compliance.md  stripe_monetization_plan.md  user-procedures.md  video_demo.md  viral-strategy.md  website_redesign1.md  website_redesign2.md  website_redesign3.md  website_redesign4.md  website_redesign5.md  website_redesign6.md  website_redesign7.md  website_redesign8.md
docs/video/: record_demo.py
frontend/: next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx
frontend/src/components/: Providers.tsx
frontend/src/lib/: apiClient.ts
scripts/: demo.py  setup_dev.ps1  setup_dev.sh
src/orchestra/: __init__.py  config.py  main.py
src/orchestra/agents/: __init__.py  analytics_agent.py  compliance.py  content.py  contracts.py  dsp_publish.py  optimizer.py  orchestrator.py  platform_agent.py  policy.py  safety.py  support_agent.py  trace.py
src/orchestra/api/: deps.py
src/orchestra/bidding/: __init__.py  approval.py  engine.py  guardrails.py  kill_switch.py
src/orchestra/cli/: __init__.py  app.py  client.py  config.py
src/orchestra/compliance/: __init__.py  content_validator.py  policy_monitor.py  (+3 more)
tests/: conftest.py  test_api_keys.py  test_auth.py  test_auth_pipeline.py  test_bidding.py  test_cli.py  test_compliance.py  test_content.py  test_debt_fixes.py  test_dsp_client.py  test_health.py  test_orchestrator.py  test_platforms.py  test_risk.py  test_security.py  test_step3_routes.py  test_support_faq.py
website/: next.config.ts  package-lock.json  package.json
website/public/: robots.txt
(+133 files in other folders)
