[tool.poetry]
name = "orchestraai"
version = "0.1.0"
description = "AI-Native Marketing Orchestration Platform"
authors = ["OrchestraAI <hello@orchestraai.dev>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "orchestra", from = "src"}]
keywords = ["ai", "marketing", "orchestration", "multi-agent", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.scripts]
orchestra = "orchestra.cli.app:app"

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}

# AI / LLM
langgraph = "^0.4"
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-anthropic = "^0.3"
langchain-community = "^0.3"

# Vector database
qdrant-client = "^1.13"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"

# Cache / Event bus
redis = {extras = ["hiredis"], version = "^5.2"}

# Kafka
aiokafka = "^0.12"

# CLI
typer = {extras = ["all"], version = "^0.15"}

# Config & validation
pydantic = {extras = ["email"], version = "^2.10"}
pydantic-settings = "^2.7"

# HTTP client
httpx = "^0.28"

# Security
cryptography = "^44.0"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}

# Scheduling
apscheduler = "^3.10"

# Utilities
python-multipart = "^0.0.18"
python-dotenv = "^1.0"
structlog = "^24.4"
tenacity = "^9.0"
orjson = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
pytest-cov = "^6.0"
httpx = "^0.28"
ruff = "^0.9"
mypy = "^1.14"
pre-commit = "^4.0"
faker = "^33.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RET", "SIM"]
ignore = ["S101", "S104"]

[tool.ruff.lint.isort]
known-first-party = ["orchestra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
